<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".LabTestActivity">

    <!-- Header Text Views -->
    <TextView
        android:id="@+id/textViewDDName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riprocare1"
        android:textColor="@color/off_white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewDDTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_location_kushtia"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewDDName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textViewBMCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_medicine1"
        android:textColor="@color/light_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewDDTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Button Container at bottom -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonBMCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_cart"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/buttonBMCartBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back2"/>
    </LinearLayout>

    <!-- ListView between header and buttons -->
    <ListView
        android:id="@+id/listViewBM"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMCart"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>