<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".BuyMedicineBookActivity">
    <TextView
        android:id="@+id/textViewLTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riprocare"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/editTextBMAddress"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_add_home_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMPackageName" />

    <EditText
        android:id="@+id/editTextBMFullName"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMPackageName" />

    <EditText
        android:id="@+id/editTextBMContactNumber"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBMAddress" />

    <EditText
        android:id="@+id/editTextBMPinCode"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_barcode_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/pin_code"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBMAddress" />

    <Button
        android:id="@+id/buttonBMBooking"
        android:layout_width="252dp"
        android:layout_height="37dp"
        android:background="@drawable/btn_bg"
        android:text="@string/book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBMContactNumber" />

    <TextView
        android:id="@+id/textViewBMPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_all_details_for_booking"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLTB"
        app:layout_constraintVertical_bias="0.088" />


</androidx.constraintlayout.widget.ConstraintLayout>